# neironggongchang

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DELIVERY-v0.1.md  DELIVERY.md  KNOWN_ISSUES.md  PRD_v2.md  README.md  app.py  pyproject.toml  pytest.ini  requirements.txt  test_report.md
.claude/: settings.json
backend/: api.py
docs/: AGENT_BOARD.md  KNOWN_ISSUES.md  MULTI_AGENT_WORKFLOW.md  NEW-SKILL-PLAYBOOK.md  PRD_v1_hermes.md  PROGRESS.md  SYSTEM-CONSTRAINTS.md  TECHNICAL-DECISIONS.md  USER_JOURNEY_AUDIT.md  WECHAT-SKILL-LESSONS.md
scripts/: add_skill.py  agent_dashboard.py  agent_delegation_audit.py  agent_dispatcher.py  agent_inbox.py  agent_materials_loop.py  agent_queue.py  agent_repair_supervisor.py  agent_site_optimization_watch.py  audit-cron-tick.sh  audit_data_paths.py  backfill_text_works_d093.py  create_agent_worktree.sh  e2e_baokuan_progressive.js  e2e_beta_warroom.js  e2e_compliance_progressive.js  e2e_copy_timelines.js  e2e_error_boundaries.js  e2e_hotrewrite_progressive.js  e2e_hotrewrite_versions.js  e2e_pages_smoke.js  e2e_shiliu.py  e2e_textllm_full.js  e2e_touliu_progress.js  e2e_web.py  e2e_wechat_d096_flow.js  e2e_wechat_edit_propagation.js  e2e_wechat_write_recover.js  e2e_works_t009_t011.js  e2e_write_active_tasks.js  install_agent_desktop_launcher.sh  migrate_assets.py  run_e2e_full.sh  setup.sh  setup_cosyvoice.sh  smoke_endpoints.sh  smoke_new_apis.py  smoke_test.py  start.sh  start_agent_dashboard.sh  (+17 more)
shortvideo/: __init__.py  ai.py  apimart.py  claude_opus.py  config.py  cosyvoice.py  db.py  deepseek.py  qingdou.py  (+6 more)
(+280 files in other folders)
